--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -4,7 +4,9 @@
 @use '_partials/mixins' as *;
 
 //  web app so stay in viewport
-body {
+#app {
     width: 100vw;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
