--- a/src/assets/scss/_partials/_variables.scss
+++ b/src/assets/scss/_partials/_variables.scss
@@ -5,3 +5,10 @@ color
 $primary: #ab0000;
 $secondary: black;
 $tertiary: #434343;
+
+/******
+dimension
+******/
+
+$cardHeight: 513px;
+$cardWidth: 342px;
